[package]
name = "docuum"
version = "0.12.0"
authors = ["Stephan Boyer <stephan@stephanboyer.com>"]
edition = "2018"
description = "LRU eviction of Docker images"
license = "MIT"
documentation = "https://github.com/stepchowfun/docuum"
homepage = "https://github.com/stepchowfun/docuum"
repository = "https://github.com/stepchowfun/docuum"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.14"
byte-unit = "4.0.19"
colored = "2"
dirs = "5"
env_logger = "0.10"
log = "0.4"
serde_yaml = "0.9"
tokio-stream = "0.1.14"

[dependencies.clap]
version = "4"
features = ["wrap_help"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.time]
version = "0.3"
features = ["formatting", "std", "local-offset"]
